DFR-2123: address the sonar issues